--- a/MyShop/MyShop.WebUI.Tests/MyShop.WebUI.Tests.csproj
+++ b/MyShop/MyShop.WebUI.Tests/MyShop.WebUI.Tests.csproj
@@ -89,6 +89,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\BasketControllerTests.cs" />
+    <Compile Include="Mocks\MockContext.cs" />
+    <Compile Include="Mocks\MockHttpContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
@@ -99,6 +102,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MyShop.Core\MyShop.Core.csproj">
+      <Project>{94ECAF44-F2F0-4FD9-B5DA-E7725B0CCE61}</Project>
+      <Name>MyShop.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MyShop.Services\MyShop.Services.csproj">
+      <Project>{0148E5EC-0722-4593-9867-DDB4ACE71A07}</Project>
+      <Name>MyShop.Services</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MyShop.WebUI\MyShop.WebUI.csproj">
       <Project>{A5D2BDB3-A0E0-42A9-A4F0-25AC884BA6A9}</Project>
       <Name>MyShop.WebUI</Name>
