--- a/MyShop/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
+++ b/MyShop/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
@@ -60,6 +60,10 @@
     <Compile Include="Migrations\202201281117599_AddBasket.designer.cs">
       <DependentUpon>202201281117599_AddBasket.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202202031314301_AddCustomers.cs" />
+    <Compile Include="Migrations\202202031314301_AddCustomers.designer.cs">
+      <DependentUpon>202202031314301_AddCustomers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepository.cs" />
@@ -80,6 +84,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202201281117599_AddBasket.resx">
       <DependentUpon>202201281117599_AddBasket.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202202031314301_AddCustomers.resx">
+      <DependentUpon>202202031314301_AddCustomers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
